# rss-discord-bot

./: .gitignore  README.md  bot.py  json_db.py  pyproject.toml  updater.py
