[tool.poetry]
name = "rss_bot"
version = "0.1.0"
description = ""
authors = ["ZechCodes <hi@zech.codes>"]

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.0.0-alpha.10"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
